# FarmSimulation

./: Dockerfile  FIXES_APPLIED.md  META_HACKATHON_ANALYSIS.md  README.md  README_GITHUB.md  ROUND1_COMPLIANCE_CHECKLIST.md  STRATEGIC_SUMMARY.md  baseline_results.json  docs.html  farming_realism_analysis.md  inference.py  models.py  openenv.yaml  pyproject.toml  server_log.txt  test_inference_mock.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase7.py  test_ui.py  verify_all.py  verify_logic.py
farming_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: Dockerfile  app.py  farming_environment.py  gradio_app.py  requirements.txt  tasks.py
