[project]
name = "farming-env"
version = "1.0.0"
description = "A farming simulation RL environment where an agent manages 4 land plots across 3 rotating climates"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

